src/objects/OM_DC__c.object
<CustomObject>
    <description>For all OM DCs</description>
    <fields>
        <fullName>OM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_DC_Number__c</fullName>
        <externalId>true</externalId>
        <label>DC Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_DC_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Power of One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_General_Manager__c</fullName>
        <label>General Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Street_Address__c</fullName>
        <label>Street Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LDC</fullName>
                </value>
                <value>
                    <fullName>MDC</fullName>
                </value>
                <value>
                    <fullName>SLC</fullName>
                </value>
                <value>
                    <fullName>RDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OM_DC_Number__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DC Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>